--- a/index.html
+++ b/index.html
@@ -33,13 +33,16 @@ section: front
           </script>
         </p>
       </div>
-      <ul id="js-news" class="js-hidden">
-        <li class="news-item"><a href="#">This is the 1st latest news item.</a></li>
-        <li class="news-item"><a href="#">This is the 2nd latest news item.</a></li>
-        <li class="news-item"><a href="#">This is the 3rd latest news item.</a></li>
-        <li class="news-item"><a href="#">This is the 4th latest news item.</a></li>
-      </ul>
     </div>
+  </div>
+
+  <div class="news-ticker">
+    <ul id="js-news" class="js-hidden">
+      <li class="news-item"><a href="#">This is the 1st latest news item.</a></li>
+      <li class="news-item"><a href="#">This is the 2nd latest news item.</a></li>
+      <li class="news-item"><a href="#">This is the 3rd latest news item.</a></li>
+      <li class="news-item"><a href="#">This is the 4th latest news item.</a></li>
+    </ul>
   </div>
 
   <div class="social">
