--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ section: front
   <script src="js/jquery.ticker.js" type="text/javascript"></script>
   <script type="text/javascript">
       $(function () {
-          $('#js-news').ticker({controls: false, titleText: 'News', displayType: 'fade'});
+          $('#js-news').ticker({controls: false, titleText: 'Latest news', displayTypeee: 'fade'});
       });
   </script>  
   <script type="text/javascript">
