--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ section: front
 ---
 
 <div class="container">
+  <link href="css/ticker-style.css" rel="stylesheet" type="text/css" />
 
   <div class="hero-unit">
     <div class="row">
@@ -94,32 +95,28 @@ section: front
   </div>
 
   <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
-  <link href="css/ticker-style.css" rel="stylesheet" type="text/css" />
   <script src="js/jquery.ticker.js" type="text/javascript"></script>
   <script type="text/javascript">
-      $(function () {
-          $('#js-news').ticker({
-            controls: false, 
-            titleText: 'Latest news', 
-            htmlFeed: false,
-            ajaxFeed: true,
-            feedUrl: 'http://blog.robovm.org/feeds/posts/default?alt=rss'
-          });
-      });
   </script>  
   <script type="text/javascript">
-
-    function parseRSS(url, callback) {
-      $.ajax({
-        url: document.location.protocol + '//ajax.googleapis.com/ajax/services/feed/load?v=1.0&num=10&callback=?&q=' + encodeURIComponent(url),
-        dataType: 'json',
-        success: function(data) {
-          callback(data.responseData.feed);
+    $(function () {
+        function parseRSS(url, callback) {
+          $.ajax({
+            url: document.location.protocol + '//ajax.googleapis.com/ajax/services/feed/load?v=1.0&num=10&callback=?&q=' + encodeURIComponent(url),
+            dataType: 'json',
+            success: function(data) {
+              callback(data.responseData.feed);
+            }
+          });
         }
-      });
-    }
-    parseRSS('http://blog.robovm.org/feeds/posts/default?alt=rss', function (feed) {
-      console.log(feed);
+        parseRSS('http://blog.robovm.org/feeds/posts/default?alt=rss', function (feed) {
+          console.log(feed);
+        });
+
+        $('#js-news').ticker({
+          controls: false, 
+          titleText: 'Latest news'
+        });
     });
   </script>
 </div>
