--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@ section: front
 
         $('#js-news').ticker({
           controls: false, 
-          titleText: 'Latest news'
+          titleText: 'Latest news',
+          displayType: 'fade'
         });
     });
   </script>
