--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ section: front
 <div class="container">
 
   <div id="news-ticker">
-    <div class="news-ticker-content"></div>
+    <div class="news-ticker-content" style="opacity: 0;"></div>
   </div>
 
   <div class="hero-unit">
@@ -104,7 +104,13 @@ section: front
           });
         }
         function newsTicker(entries, index) {
-          $('.news-ticker-content').html('<a href="' + entries[index].link + '">' + entries[index].title + '</a>');
+          $('.news-ticker-content')
+            .html('<a href="' + entries[index].link + '">' + entries[index].title + '</a>')
+            .fadeIn(function () {
+              window.setTimeout(function () {
+                
+              }, 3000);
+            });
         }
         parseRSS('http://blog.robovm.org/feeds/posts/default?alt=rss', function (feed) {
           var entries = feed.entries;
