--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ section: front
 
 <div class="container">
 
-  <div id="news-ticker">
-    <div class="news-ticker-content"></div>
+  <div id="news-ticker" style="opacity: 0;">
+    <div class="news-ticker-content">FOO BAR</div>
   </div>
 
   <div class="hero-unit">
