--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ section: front
 <div class="container">
 
   <div id="news-ticker">
-    <span class="news-ticker-title">NEWS</span><span class="news-ticker-content"></span>
+    <span class="news-ticker-title">NEWS</span><span class="news-ticker-content" style="display: none;"></span>
   </div>
 
   <div class="hero-unit">
@@ -104,7 +104,6 @@ section: front
           });
         }
         function newsTicker(entries, index) {
-          $('.news-ticker-content')[0].style.opacity = 0.0;
           $('.news-ticker-content')
             .html('<a href="' + entries[index].link + '">' + entries[index].title + '</a>');
           $('.news-ticker-content')
