--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@ section: front
       <li>
         <iframe src="//www.facebook.com/plugins/like.php?href=www.facebook.com/robovm&amp;send=false&amp;layout=button_count&amp;width=90&amp;show_faces=false&amp;font&amp;colorscheme=light&amp;action=like&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
       </li>
+      <li>
+        <g:plusone></g:plusone>
+      </li>
     </ul>
   </div>
 
@@ -92,6 +95,7 @@ section: front
   </div>
 
   <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+  <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
   <script type="text/javascript">
     $(function () {
         function parseRSS(url, callback) {
