--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ section: front
         <iframe src="//www.facebook.com/plugins/like.php?href=www.facebook.com/robovm&amp;send=false&amp;layout=button_count&amp;width=90&amp;show_faces=false&amp;font&amp;colorscheme=light&amp;action=like&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
       </li>
       <li>
-        <g:plusone></g:plusone>
+        <g:plusone href="http://www.robovm.org"></g:plusone>
       </li>
     </ul>
   </div>
