--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@ section: front
       </li>
       <li>
 <!--        <iframe src="//www.facebook.com/plugins/like.php?href=www.facebook.com/robovm&amp;send=false&amp;layout=button_count&amp;width=90&amp;show_faces=false&amp;font&amp;colorscheme=light&amp;action=like&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe> -->
-        <fb:like href="http://www.facebook.com/robovm" send="false" layout="button_count" width="90" show_faces="false"></fb:like>
+<!--        <fb:like href="http://www.facebook.com/robovm" send="false" layout="button_count" width="90" show_faces="false"></fb:like> -->
+        <fb:like href="http://www.robovm.org" send="false" layout="button_count" width="90" show_faces="false"></fb:like>
       </li>
       <li>
         <g:plusone href="http://www.robovm.org"></g:plusone>
