--- a/docs.html
+++ b/docs.html
@@ -258,7 +258,7 @@ javac -cp /opt/robovm/lib/robovm-rt.jar:/opt/robovm/lib/robovm-objc.jar:/opt/rob
           the dialog box. Then follow the instructions from there.
         </p>
 
-        <pre>http://download.robovm.org/eclipse/site.xml</pre>
+        <pre>http://download.robovm.org/eclipse/</pre>
 
         <p>
           After the plug-in has been installed and Eclipse has been restarted we can
