--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ section: front
           <a id="update-site-link" href="#">Get&nbsp;the&nbsp;Eclipse&nbsp;plug-in&nbsp;&raquo;</a>
           <div id="update-site-popover" style="display: none;">To install RoboVM for Eclipse, open Eclipse, go to <em>Help &rarr; Install New Software</em>, 
             and paste this URL into the dialog box. Then, follow the on-screen instructions from there.
-            <div class="update-site-url">http://download.robovm.org/eclipse/site.xml</div>
+            <div class="update-site-url">http://download.robovm.org/eclipse/</div>
           </div>
           <script type="text/javascript">
             $(document).ready(function() {
