--- a/docs.html
+++ b/docs.html
@@ -255,7 +255,8 @@ javac -cp /opt/robovm/lib/robovm-rt.jar:/opt/robovm/lib/robovm-objc.jar:/opt/rob
         <p>
           Now lets install the RoboVM Eclipse plug-in and try it out. Open Eclipse, 
           go to <em>Help &rarr; Install New Software</em>, and paste the URL below into 
-          the dialog box. Then follow the instructions from there.
+          the dialog box. Select the <em>RoboVM for Eclipse</em> feature and click <em>Next</em>
+          and follow the instructions.
         </p>
 
         <pre>http://download.robovm.org/eclipse/</pre>
