--- a/docs.html
+++ b/docs.html
@@ -334,7 +334,7 @@ sudo dpkg -i cmake*.deb
 <pre>
 git clone https://github.com/robovm/robovm.git
 cd robovm/vm
-./build.sh --build=Debug
+./build.sh
 cd ..
 mvn -DskipTests=true clean install
 </pre>
