Include copy-binaries.sh in build instructions
When building from source, if you forget to run copy-binaries.sh then things break.

I was getting link errors where the symbol '__fdelt_chk' could not be resolved.

--- a/docs.html
+++ b/docs.html
@@ -335,6 +335,7 @@ sudo dpkg -i cmake*.deb
 git clone https://github.com/robovm/robovm.git
 cd robovm/vm
 ./build.sh
+./copy-binaries.sh
 cd ..
 mvn -DskipTests=true clean install
 </pre>
