--- a/docs.html
+++ b/docs.html
@@ -73,7 +73,7 @@ sudo ln -s /opt/clang+llvm-3.2-x86_64-apple-darwin11 /opt/llvm
         <p>Most of the required tools are available in the standard Ubuntu repositories. In a terminal:</p>
 
 <pre>
-sudo apt-get install build-essential gcc-multilib openjdk-7-jdk
+sudo apt-get install build-essential g++-multilib openjdk-7-jdk
 </pre>
 
         <p>Download and install the LLVM tools to /opt/llvm:</p>
@@ -275,8 +275,8 @@ javac -cp /opt/robovm/lib/robovm-rt.jar:/opt/robovm/lib/robovm-objc.jar:/opt/rob
         </p>
 
         <p>
-          Finally, launch the app in the iOS simulator by right clicking the <code>IOSDemo</code> class
-          in the package explorer and select <em>Run As... &rarr; iOS Simulator App</em>.
+          Finally, launch the app in the iOS simulator by right clicking the project you created and 
+          select <em>Run As... &rarr; iOS Simulator App</em>.
         </p>
 
         </section>
