--- a/beta-signup.html
+++ b/beta-signup.html
@@ -6,12 +6,21 @@ section: beta-signup
 
 <div class="container">
 
-  <div class="row">
-    <div class="span12">
-      <h1>RoboVM</h1>
-      <p><strong>Develop iPhone and iPad Apps in Java with RoboVM</strong></p>
+  <div class="hero-unit">
+    <div class="row">
+      <div class="span7">
+        <h1>RoboVM</h1>
+        <p>Develop iPhone and iPad Apps in Java with RoboVM</p>
+      </div>
+      <div class="span3">
+        <p>
+          With RoboVM you will be able to develop truly <em>native iOS apps</em>
+          in <em>Java and other JVM languages</em>. You use your <em>favorite Java tools</em> and
+          can easily <em>share code between your Android and iOS apps</em>. RoboVM gives
+          apps access to the <em>CocoaTouch APIs from within Java</em>.
+        </p>
+      </div>
     </div>
   </div>
-
 
 </div>
