--- a/beta-signup.html
+++ b/beta-signup.html
@@ -8,16 +8,16 @@ section: beta-signup
 
   <div class="hero-unit">
     <div class="row">
-      <div class="span7">
+      <div class="span5">
         <h1>RoboVM</h1>
         <p>Develop iPhone and iPad Apps in Java with RoboVM</p>
       </div>
-      <div class="span3">
+      <div class="span5" style="font-size: 15px;">
         <p>
-          With RoboVM you will be able to develop truly <em>native iOS apps</em>
-          in <em>Java and other JVM languages</em>. You use your <em>favorite Java tools</em> and
-          can easily <em>share code between your Android and iOS apps</em>. RoboVM gives
-          apps access to the <em>CocoaTouch APIs from within Java</em>.
+          With RoboVM you will be able to develop truly <strong>native iOS apps</strong>
+          in <strong>Java and other JVM languages</strong>. You use your <strong>favorite Java tools</strong> and
+          can easily <strong>share code between your Android and iOS apps</strong>. RoboVM gives
+          apps access to the <strong>CocoaTouch APIs from within Java</strong>.
         </p>
       </div>
     </div>
