--- a/beta-signup.html
+++ b/beta-signup.html
@@ -12,10 +12,10 @@ section: beta-signup
         <h1>RoboVM</h1>
         <p>Develop iPhone and iPad Apps in Java with RoboVM</p>
       </div>
-      <div class="span5" style="font-size: 15px;">
+      <div class="span5 beta-signup">
         <p>
           With RoboVM you will be able to develop truly <strong>native iOS apps</strong>
-          in <strong>Java and other JVM languages</strong>. You use your <strong>favorite Java tools</strong> and
+          in <strong>Java</strong> and other JVM languages. You use your <strong>favorite Java tools</strong> and
           can easily <strong>share code between your Android and iOS apps</strong>. RoboVM gives
           apps access to the <strong>CocoaTouch APIs from within Java</strong>.
         </p>
