--- a/beta-signup.html
+++ b/beta-signup.html
@@ -8,7 +8,7 @@ section: beta-signup
 
   <div class="hero-unit">
     <div class="row">
-      <div class="beta-signup">
+      <div class="span6 beta-signup">
         <p>
           With RoboVM you will be able to develop truly <strong>native iOS apps</strong>
           in <strong>Java</strong> and other JVM languages. You use your <strong>favorite Java tools</strong> and
@@ -16,7 +16,7 @@ section: beta-signup
           apps access to the <strong>CocoaTouch APIs from within Java</strong>.
         </p>
       </div>
-      <div class="span7">
+      <div class="span6">
         <h1>RoboVM</h1>
         <p>Develop iPhone and iPad Apps in Java with RoboVM</p>
       </div>
