--- a/beta-signup.html
+++ b/beta-signup.html
@@ -8,17 +8,16 @@ section: beta-signup
 
   <div class="hero-unit">
     <div class="row">
-      <div class="span6 beta-signup">
+      <div class="span5">
+        <h1>RoboVM</h1>
+      </div>
+      <div class="span5">
         <p>
-          With RoboVM you will be able to develop truly <strong>native iOS apps</strong>
+          With RoboVM you will be able to develop <strong>native iOS apps</strong>
           in <strong>Java</strong> and other JVM languages. You use your <strong>favorite Java tools</strong> and
           can easily <strong>share code</strong> between your <strong>Android and iOS apps</strong>. RoboVM gives
-          apps access to the <strong>CocoaTouch APIs from within Java</strong>.
+          apps access to the <strong>CocoaTouch APIs</strong> from within Java.
         </p>
-      </div>
-      <div class="span6">
-        <h1>RoboVM</h1>
-        <p>Develop iPhone and iPad Apps in Java with RoboVM</p>
       </div>
     </div>
   </div>
