--- a/beta-signup.html
+++ b/beta-signup.html
@@ -11,7 +11,7 @@ section: beta-signup
       <div class="span5">
         <h1>RoboVM</h1>
       </div>
-      <div class="span5">
+      <div class="span5 beta-signup">
         <p>
           With RoboVM you will be able to develop <strong>native iOS apps</strong>
           in <strong>Java</strong> and other JVM languages. You use your <strong>favorite Java tools</strong> and
