--- a/beta-signup.html
+++ b/beta-signup.html
@@ -10,6 +10,7 @@ section: beta-signup
     <div class="row">
       <div class="span5">
         <h1>RoboVM</h1>
+        <p>Develop iPhone and iPad Apps in Java with RoboVM</p>
       </div>
       <div class="span5 beta-signup">
         <p>
