--- a/beta-signup.html
+++ b/beta-signup.html
@@ -15,9 +15,10 @@ section: beta-signup
       <div class="span5 beta-signup">
         <p>
           With RoboVM you will be able to develop <strong>native iOS apps</strong>
-          in <strong>Java</strong> and other JVM languages. You use your <strong>favorite Java tools</strong> and
-          can easily <strong>share code</strong> between your <strong>Android and iOS apps</strong>. RoboVM gives
-          apps access to the <strong>CocoaTouch APIs</strong> from within Java.
+          in <strong>Java</strong> and other JVM languages using your 
+          <strong>favorite Java tools</strong>. You can easily 
+          <strong>share code</strong> between your <strong>Android and iOS apps</strong>
+          and you will also have access to the <strong>CocoaTouch APIs</strong> from within Java.
         </p>
       </div>
     </div>
