--- a/beta-signup.html
+++ b/beta-signup.html
@@ -16,9 +16,9 @@ section: beta-signup
         <p>
           With RoboVM you will be able to develop <strong>native iOS apps</strong>
           in <strong>Java</strong> and other JVM languages using your 
-          <strong>favorite Java tools</strong>. You can easily 
+          <strong>favorite Java tools</strong>. RoboVM lets you 
           <strong>share code</strong> between your <strong>Android and iOS apps</strong>
-          and you will also have access to the <strong>CocoaTouch APIs</strong> from within Java.
+          and access the <strong>CocoaTouch APIs</strong> from within Java.
         </p>
       </div>
     </div>
