--- a/beta-signup.html
+++ b/beta-signup.html
@@ -20,6 +20,15 @@ section: beta-signup
           <strong>share code</strong> between your <strong>Android and iOS apps</strong>
           and access the <strong>CocoaTouch APIs</strong> from within Java.
         </p>
+        <p>
+          Please signup below to get notified when RoboVM enters beta or <a href="/">try out
+          the latest alpha build today</a>.
+        </p>
+        <p>
+          <form>
+            E-mail: <input type="text"/> <input type="submit" value="Send"/>
+          </form>
+        </p>
       </div>
     </div>
   </div>
