--- a/beta-signup.html
+++ b/beta-signup.html
@@ -26,12 +26,12 @@ section: beta-signup
           and access the <strong>CocoaTouch APIs</strong> from within Java.
         </p>
         <p>
-          Please signup below to get notified when RoboVM enters beta or <a href="/">try out
+          Please sign up below to get notified when RoboVM enters beta or <a href="/">try out
           the latest alpha build today</a>.
         </p>
         <p>
-          <form>
-            <input type="text" title="Your e-mail address" class="defaultText"/><input type="submit" value="Signup"/>
+          <form class="form-inline">
+            <input type="text" placeholder="Your e-mail address"/><button type="submit" class="btn">Sign up</button>
           </form>
         </p>
       </div>
