--- a/beta-signup.html
+++ b/beta-signup.html
@@ -26,10 +26,10 @@ section: beta-signup
           and access the <strong>CocoaTouch APIs</strong> from within Java.
         </p>
         <p>
-          Please sign up below to get notified when RoboVM enters beta or <a href="/">try out
+          Please <strong>sign up below</strong> to get notified when RoboVM enters beta or <a href="/">try out
           the latest alpha build today</a>.
         </p>
-        <p>
+        <p style="text-align: center;">
           <form class="form-inline">
             <input type="text" placeholder="Your e-mail address"/><button type="submit" class="btn">Sign up</button>
           </form>
