--- a/beta-signup.html
+++ b/beta-signup.html
@@ -29,11 +29,9 @@ section: beta-signup
           Please <strong>sign up below</strong> to get notified when RoboVM enters beta or <a href="/">try out
           the latest alpha build today</a>.
         </p>
-        <p style="text-align: center;">
-          <form class="form-inline">
-            <input type="text" placeholder="Your e-mail address"/><button type="submit" class="btn">Sign up</button>
-          </form>
-        </p>
+        <form class="form-inline" style="text-align: center;">
+          <input type="text" placeholder="Your e-mail address"/><button type="submit" class="btn">Sign up</button>
+        </form>
       </div>
     </div>
   </div>
