--- a/beta-signup.html
+++ b/beta-signup.html
@@ -13,11 +13,11 @@ section: beta-signup
 
   <div class="hero-unit">
     <div class="row">
-      <div class="span5">
+      <div class="span4">
         <h1>RoboVM</h1>
         <p>Develop iPhone and iPad Apps in Java with RoboVM</p>
       </div>
-      <div class="span6 beta-signup">
+      <div class="span5 beta-signup">
         <p>
           With RoboVM you will be able to develop <strong>native iOS apps</strong>
           in <strong>Java</strong> and other JVM languages using your 
@@ -29,7 +29,7 @@ section: beta-signup
           Please <strong>sign up below</strong> to get notified when RoboVM enters beta or <a href="/">try out
           the latest alpha build today</a>.
         </p>
-        <form class="form-inline" style="text-align: center;">
+        <form class="form-inline">
           <input type="text" placeholder="Your e-mail address"/><button type="submit" class="btn">Sign up</button>
         </form>
       </div>
