--- a/beta-signup.html
+++ b/beta-signup.html
@@ -4,6 +4,7 @@ title: beta-signup
 section: beta-signup
 ---
 
+<iframe name="beta-signup-target" width="0" height="0"></iframe>
 <div class="container">
 
   <div class="hero-unit">
@@ -24,7 +25,7 @@ section: beta-signup
           Please <strong>sign up below</strong> to get notified when RoboVM enters beta or <a href="/">try out
           the latest alpha build today</a>.
         </p>
-        <form class="form-inline" action="https://docs.google.com/a/therning.org/forms/d/1k8FO18Q5UviYrnTOU520wT5gile3ekgMWlW61JyNGI4/formResponse" method="POST">
+        <form class="form-inline" action="https://docs.google.com/a/therning.org/forms/d/1k8FO18Q5UviYrnTOU520wT5gile3ekgMWlW61JyNGI4/formResponse" method="POST" target="beta-signup-target">
           <input id="entry_229880151" type="text" name="entry.229880151" placeholder="Your e-mail address"/> <button type="submit" id="ss-submit" name="submit" class="btn btn-primary">Sign up</button>
           <input type="hidden" name="draftResponse" value="[]">
           <input type="hidden" name="pageHistory" value="0">
