--- a/beta-signup.html
+++ b/beta-signup.html
@@ -46,7 +46,7 @@ section: beta-signup
     });
     $("#entry_229880151").keyup(function (){
       console.log(this.value);
-      $(this).prop("disabled", !isValidEmailAddress(this.value));
+      $("#ss-submit").prop("disabled", !isValidEmailAddress(this.value));
     });
   });
   function isValidEmailAddress(emailAddress) {
