--- a/beta-signup.html
+++ b/beta-signup.html
@@ -30,7 +30,7 @@ section: beta-signup
           <input type="hidden" name="draftResponse" value="[]">
           <input type="hidden" name="pageHistory" value="0">
         </form>
-        <p id="thank-you" style="display: none;">Thank you for signing up! We'll be in touch.</p>
+        <p id="thank-you" style="display: none;"><strong>Thank you for signing up! We'll be in touch.</strong></p>
       </div>
     </div>
   </div>
