--- a/beta-signup.html
+++ b/beta-signup.html
@@ -4,7 +4,7 @@ title: beta-signup
 section: beta-signup
 ---
 
-<iframe name="beta-signup-target" id="beta-signup-target" width="0" height="0"></iframe>
+<iframe name="beta-signup-target" id="beta-signup-target" width="0" height="0" style="margin-left: -100px;"></iframe>
 <div class="container">
 
   <div class="hero-unit">
