--- a/beta-signup.html
+++ b/beta-signup.html
@@ -25,7 +25,7 @@ section: beta-signup
           Please <strong>sign up below</strong> to get notified when RoboVM enters beta or <a href="/">try out
           the latest alpha build today</a>.
         </p>
-        <form id="beta-signup-form" class="form-inline" action="https://docs.google.com/a/therning.org/forms/d/1k8FO18Q5UviYrnTOU520wT5gile3ekgMWlW61JyNGI4/formResponse" method="POST" target="beta-signup-target" onsubmit="">
+        <form id="beta-signup-form" class="form-inline" action="https://docs.google.com/a/therning.org/forms/d/1k8FO18Q5UviYrnTOU520wT5gile3ekgMWlW61JyNGI4/formResponse" method="POST" target="beta-signup-target" onsubmit="submitForm(); return false;">
           <input id="entry_229880151" type="text" name="entry.229880151" placeholder="Your e-mail address"/> <button type="submit" id="ss-submit" name="submit" class="btn btn-primary" disabled>Sign up</button>
           <input type="hidden" name="draftResponse" value="[]">
           <input type="hidden" name="pageHistory" value="0">
@@ -41,13 +41,17 @@ section: beta-signup
     var emailPattern = new RegExp(/^((([a-z]|\d|[!#\$%&'\*\+\-\/=\?\^_`{\|}~]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])+(\.([a-z]|\d|[!#\$%&'\*\+\-\/=\?\^_`{\|}~]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])+)*)|((\x22)((((\x20|\x09)*(\x0d\x0a))?(\x20|\x09)+)?(([\x01-\x08\x0b\x0c\x0e-\x1f\x7f]|\x21|[\x23-\x5b]|[\x5d-\x7e]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(\\([\x01-\x09\x0b\x0c\x0d-\x7f]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF]))))*(((\x20|\x09)*(\x0d\x0a))?(\x20|\x09)+)?(\x22)))@((([a-z]|\d|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(([a-z]|\d|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])*([a-z]|\d|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])))\.)+(([a-z]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(([a-z]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])*([a-z]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])))\.?$/i);
   $(document).ready(function() {
     $("#beta-signup-target").load(function (){
-      console.log(this.location.href);
+      console.log(this.hasClass("submitted"));
       $("#beta-signup-form").hide();
       $("#thank-you").show();
     });
     $("#entry_229880151").keyup(function (){
       $("#ss-submit").prop("disabled", !isValidEmailAddress(this.value));
     });
+    function submitForm() {
+      $("#beta-signup-target").addClass("submitted");
+      $("#beta-signup-form").submit();
+    }
   });
   function isValidEmailAddress(emailAddress) {
     return emailPattern.test(emailAddress);
